monitoring-health: Fix `.vertical-key-value` layout, when wrapping

--- a/public/css/widget/monitoring-health.less
+++ b/public/css/widget/monitoring-health.less
@@ -42,6 +42,15 @@
     justify-content: space-around;
   }
 
+
+  .icinga-info {
+    margin-bottom: -2em;
+
+    .vertical-key-value {
+      margin-bottom: 2em;
+    }
+  }
+
   .col {
     flex: 1 1 auto;
     text-align: center;
@@ -112,10 +121,6 @@
   .icinga-info {
     .vertical-key-value {
       width: 100%;
-
-      & + .vertical-key-value {
-        margin-top: 2em
-      }
     }
   }
 
